# modai-prototype

./: .env.example  .gitignore  README.md  architecture_and_optimizations.md  docker-compose.yml
ai_engine/: Dockerfile  requirements.txt
ai_engine/app/: cache_service.py  config.py  rag_service.py  server.py
ai_engine/app/graph/: builder.py  llm.py  nodes.py  state.py
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  schemas.py  seed.py
backend/app/ai/: prompts.py
backend/app/api/: admin.py  auth.py  catalog.py  chat.py  customer.py  internal.py  kanban.py  product.py
backend/app/models/: __init__.py  catalog.py  conversation.py  customer.py  kanban.py  message.py  product.py  stock.py  tenant.py  token_usage.py  user.py
backend/app/services/: cache_service.py  chat_engine.py  embeddings.py  model_router.py  rag_service.py  token_manager.py
backend/app/services/graph/: __init__.py  builder.py  llm.py  nodes.py  state.py  tools.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/crm/: layout.tsx  page.tsx
frontend/src/app/crm/catalogs/: page.tsx
frontend/src/app/crm/conversations/: page.tsx
frontend/src/app/crm/customers/: page.tsx
frontend/src/app/crm/kanban/: page.tsx
frontend/src/app/crm/products/: page.tsx
frontend/src/app/login/: page.tsx
